@@ -84,6 +84,7 @@ Trunk (unreleased changes)
    HADOOP-2430 Master will not shut down if there are no active region servers
    HADOOP-2199 Add tools for going from hregion filename to region name in logs
    HADOOP-2441 Fix build failures in TestHBaseCluster
+   HADOOP-2451 End key is incorrectly assigned in many region splits
    
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
